Refactor: 배포 전 최소한의 수정