@@ -5,6 +5,7 @@ import com.nhnacademy.Book2OnAndOn_order_payment_service.order.client.PointServi
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.client.UserServiceClient;
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.client.dto.BookOrderResponse;
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.client.dto.StockDecreaseRequest;
+import com.nhnacademy.Book2OnAndOn_order_payment_service.order.dto.refund.RefundAvailableItemDto;
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.dto.refund.RefundItemDetailDto;
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.dto.refund.RefundItemRequestDto;
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.dto.refund.RefundPointRequestDto;
@@ -23,7 +24,6 @@ import com.nhnacademy.Book2OnAndOn_order_payment_service.order.entity.refund.Ref
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.exception.OrderNotFoundException;
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.exception.RefundNotFoundException;
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.repository.delivery.DeliveryRepository;
-import com.nhnacademy.Book2OnAndOn_order_payment_service.order.repository.order.GuestOrderRepository;
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.repository.order.OrderItemRepository;
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.repository.order.OrderRepository;
 import com.nhnacademy.Book2OnAndOn_order_payment_service.order.repository.refund.RefundItemRepository;
@@ -34,7 +34,10 @@ import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -42,10 +45,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -59,31 +58,45 @@ public class RefundServiceImpl implements RefundService {
     private final OrderItemRepository orderItemRepository;
     private final DeliveryRepository deliveryRepository;
 
-    private final BookServiceClient bookServiceClient; // 도서 제목 조회
+    private final BookServiceClient bookServiceClient;
     private final UserServiceClient userServiceClient;
     private final PointServiceClient pointServiceClient;
+
+    private RefundReason parseRefundReason(String raw) {
+        if (raw == null || raw.isBlank()) {
+            throw new IllegalArgumentException("refundReason는 필수입니다.");
+        }
+        try {
+            return RefundReason.valueOf(raw.trim());
+        } catch (Exception e) {
+            throw new IllegalArgumentException("유효하지 않은 refundReason: " + raw);
+        }
+    }
 
     // =========================
     // 1. 회원
     // =========================
-    // 1) 회원 반품 신청
     @Override
     public RefundResponseDto createRefundForMember(Long orderId, Long userId, RefundRequestDto request) {
-
         Order order = loadOrder(orderId);
 
-        // 1) 본인 주문인지 검증
-        if (!order.getUserId().equals(userId)) {
+        // 1) 본인 주문인지 검증 (refund 변수 쓰면 안 됨: refund는 아직 없음)
+        Long ownerId = order.getUserId();
+        if (ownerId == null || !ownerId.equals(userId)) {
             throw new AccessDeniedException("본인의 주문에 대해서만 반품 신청이 가능합니다.");
         }
 
-        // 2) 반품 사유 파싱
-        RefundReason reason = RefundReason.valueOf(request.getRefundReason());
-
-        // 3) 반품 가능 여부 검증
+        // 2) 반품 사유 파싱 + 정책 검증
+        RefundReason reason = parseRefundReason(request.getRefundReason());
         validateRefundEligibility(order, reason);
 
-        // 4) Refund 엔티티 생성
+        // 3) 반품 아이템 필수
+        List<RefundItemRequestDto> itemRequests = request.getRefundItems();
+        if (itemRequests == null || itemRequests.isEmpty()) {
+            throw new IllegalArgumentException("반품할 항목이 없습니다.");
+        }
+
+        // 4) Refund 생성/저장
         Refund refund = new Refund();
         refund.setRefundReason(request.getRefundReason());
         refund.setRefundReasonDetail(request.getRefundReasonDetail());
@@ -91,19 +104,28 @@ public class RefundServiceImpl implements RefundService {
         refund.setRefundCreatedAt(LocalDateTime.now());
         refund.setOrder(order);
         refundRepository.save(refund);
-        order.getRefunds().add(refund);
 
-        // 5) RefundItem
-        List<RefundItemRequestDto> itemRequests = request.getRefundItems();
-        if (itemRequests == null || itemRequests.isEmpty()) {
-            throw new IllegalArgumentException("반품할 항목이 없습니다.");
+        // (양방향 컬렉션이 null일 수 있는 프로젝트를 대비한 최소 널가드)
+        try {
+            if (order.getRefunds() != null) {
+                order.getRefunds().add(refund);
+            }
+        } catch (Exception ignore) {
+            // order 쪽 컬렉션/매핑이 없거나 LAZY 초기화 문제 등 -> 저장 자체엔 영향 없으므로 무시
         }
 
+        // 5) RefundItem 생성/저장
         for (RefundItemRequestDto dto : itemRequests) {
             OrderItem orderItem = orderItemRepository.findById(dto.getOrderItemId())
-                    .orElseThrow(() -> new IllegalArgumentException("주문 항목을 찾을 수 없습니다. orderItemId=" + dto.getOrderItemId()));
+                    .orElseThrow(() -> new IllegalArgumentException(
+                            "주문 항목을 찾을 수 없습니다. orderItemId=" + dto.getOrderItemId()));
 
-            // 수량 + 진행 중 반품 검증
+            // “해당 주문 소속” 검증 (중요: 다른 주문 itemId로 반품 신청하는 버그 방어)
+            if (orderItem.getOrder() == null || !orderId.equals(orderItem.getOrder().getOrderId())) {
+                throw new IllegalArgumentException(
+                        "주문에 속하지 않는 orderItemId 입니다. orderItemId=" + dto.getOrderItemId());
+            }
+
             validateRefundQuantity(orderItem, dto.getRefundQuantity());
             validateNoActiveRefund(orderItem);
 
@@ -116,41 +138,43 @@ public class RefundServiceImpl implements RefundService {
             refund.getRefundItem().add(refundItem);
         }
 
-        // 5) 주문 상태 변경 (반품 신청 상태로)
+        // 6) 주문 상태 변경
         order.updateStatus(OrderStatus.RETURN_REQUESTED);
 
         return toRefundResponseDto(refund);
     }
 
-    // 2) 회원 반품 상세 조회
     @Override
     @Transactional(readOnly = true)
-    public RefundResponseDto getRefundDetailsForMember(Long userId, Long refundId) {
+    public RefundResponseDto getRefundDetailsForMember(Long userId, Long refundId, Long pathOrderId) {
         Refund refund = loadRefund(refundId);
-        if (!refund.getOrder().getUserId().equals(userId)) {
+
+        Long ownerId = refund.getOrder() != null ? refund.getOrder().getUserId() : null;
+        if (ownerId == null || !ownerId.equals(userId)) {
             throw new AccessDeniedException("해당 반품 내역에 대한 접근 권한이 없습니다.");
         }
+
+        if (refund.getOrder() == null || !pathOrderId.equals(refund.getOrder().getOrderId())) {
+            throw new IllegalArgumentException("orderId가 반품 내역의 주문과 일치하지 않습니다.");
+        }
+
         return toRefundResponseDto(refund);
     }
 
-    // 3) 회원의 전체 반품 목록 조회
     @Override
     public Page<RefundResponseDto> getRefundsForMember(Long userId, Pageable pageable) {
         Page<Refund> page = refundRepository.findByOrderUserId(userId, pageable);
         return page.map(this::toRefundResponseDto);
     }
 
-    // 4) 반품 신청 취소 -> 안 해
-
     // =========================
     // 2. 비회원
     // =========================
-    // 1) 비회원 반품 신청
     @Override
     public RefundResponseDto createRefundForGuest(Long orderId, RefundRequestDto request) {
         Order order = loadOrder(orderId);
 
-        // 회원주문이 아니여야 함
+        // 비회원 주문 검증
         if (order.getUserId() != null) {
             throw new IllegalStateException("회원 주문입니다. 비회원 반품 API를 잘못 호출했습니다.");
         }
@@ -158,8 +182,13 @@ public class RefundServiceImpl implements RefundService {
             throw new IllegalStateException("비회원 주문 정보가 존재하지 않습니다.");
         }
 
-        RefundReason reason = RefundReason.valueOf(request.getRefundReason());
+        RefundReason reason = parseRefundReason(request.getRefundReason());
         validateRefundEligibility(order, reason);
+
+        List<RefundItemRequestDto> itemRequests = request.getRefundItems();
+        if (itemRequests == null || itemRequests.isEmpty()) {
+            throw new IllegalArgumentException("반품할 항목이 없습니다.");
+        }
 
         Refund refund = new Refund();
         refund.setRefundReason(request.getRefundReason());
@@ -168,16 +197,22 @@ public class RefundServiceImpl implements RefundService {
         refund.setRefundCreatedAt(LocalDateTime.now());
         refund.setOrder(order);
         refundRepository.save(refund);
-        order.getRefunds().add(refund);
 
-        List<RefundItemRequestDto> itemRequests = request.getRefundItems();
-        if (itemRequests == null || itemRequests.isEmpty()) {
-            throw new IllegalArgumentException("반품할 항목이 없습니다.");
-        }
+        try {
+            if (order.getRefunds() != null) {
+                order.getRefunds().add(refund);
+            }
+        } catch (Exception ignore) {}
 
         for (RefundItemRequestDto dto : itemRequests) {
             OrderItem orderItem = orderItemRepository.findById(dto.getOrderItemId())
-                    .orElseThrow(() -> new IllegalArgumentException("주문 항목을 찾을 수 없습니다. orderItemId=" + dto.getOrderItemId()));
+                    .orElseThrow(() -> new IllegalArgumentException(
+                            "주문 항목을 찾을 수 없습니다. orderItemId=" + dto.getOrderItemId()));
+
+            if (orderItem.getOrder() == null || !orderId.equals(orderItem.getOrder().getOrderId())) {
+                throw new IllegalArgumentException(
+                        "주문에 속하지 않는 orderItemId 입니다. orderItemId=" + dto.getOrderItemId());
+            }
 
             validateRefundQuantity(orderItem, dto.getRefundQuantity());
             validateNoActiveRefund(orderItem);
@@ -196,44 +231,38 @@ public class RefundServiceImpl implements RefundService {
         return toRefundResponseDto(refund);
     }
 
-    // 2) 비회원 반품 상세 조회
+    // 오늘 배포 목표: 기능 미구현이어도 “컴파일/기동”만 보장
+    @Override
+    public List<RefundAvailableItemDto> getRefundableItemsForMember(Long orderId, Long userId) {
+        return List.of();
+    }
+
+    @Override
+    public List<RefundAvailableItemDto> getRefundableItemsForGuest(Long orderId) {
+        return List.of();
+    }
+
     @Override
     @Transactional(readOnly = true)
-    public RefundResponseDto getRefundDetailsForGuest(Long refundId) {
+    public RefundResponseDto getRefundDetailsForGuest(Long orderId, Long refundId) {
         Refund refund = loadRefund(refundId);
-        if (refund.getOrder().getUserId() != null) {
+
+        if (refund.getOrder() == null || refund.getOrder().getUserId() != null) {
             throw new IllegalStateException("회원 주문의 반품입니다. 비회원 조회 API를 잘못 호출했습니다.");
         }
         if (refund.getOrder().getGuestOrder() == null) {
             throw new IllegalStateException("비회원 주문 정보가 존재하지 않습니다.");
         }
+        if (!orderId.equals(refund.getOrder().getOrderId())) {
+            throw new IllegalArgumentException("orderId가 반품 내역의 주문과 일치하지 않습니다.");
+        }
+
         return toRefundResponseDto(refund);
     }
-
-    // 3) 비회원의 전체 반품 목록 조회 -> TODO 생각해보니 비회원은 반품 목록 조회는 안 될듯
-//    @Override
-//    @Transactional(readOnly = true)
-//    public Page<RefundResponseDto> getRefundsForGuest(Long orderId, Pageable pageable) {
-//        // 비회원 인증(비밀번호/이메일/전화번호 등)은 Controller/Facade 계층에서 이미 통과했다고 가정
-//        Order order = loadOrder(orderId);
-//
-//        if (order.getUserId() != null) {
-//            throw new IllegalStateException("회원 주문입니다. 비회원 반품 목록 API를 잘못 호출했습니다.");
-//        }
-//        if (order.getGuestOrder() == null) {
-//            throw new IllegalStateException("비회원 주문 정보가 존재하지 않습니다.");
-//        }
-//
-//        Page<Refund> page = refundRepository.findByOrderOrderId(orderId, pageable);
-//        return page.map(this::toRefundResponseDto);
-//    }
-
-    // 4) 반품 신청 취소 -> dksgo
 
     // =========================
     // 3. 관리자
     // =========================
-    // 1) 관리자 반품 목록 조회
     @Override
     @Transactional(readOnly = true)
     public Page<RefundResponseDto> getRefundListForAdmin(
@@ -246,41 +275,34 @@ public class RefundServiceImpl implements RefundService {
             boolean includeGuest,
             Pageable pageable
     ) {
-        // 1) LocalDate -> LocalDateTime 변환 (일 단위 기준)
         LocalDateTime from = (startDate != null) ? startDate.atStartOfDay() : null;
-        LocalDateTime to = (endDate != null) ? endDate.plusDays(1).atStartOfDay() : null; // endDate 의 "다음날 0시" 직전까지 포함시키기 위해 +1일 후 startOfDay를 upper bound 로 사용
+        LocalDateTime to = (endDate != null) ? endDate.plusDays(1).atStartOfDay() : null;
 
-        // 2) userKeyword 가 있으면 user-service 에서 userId 리스트 조회
         Long effectiveUserId = userId;
         if (effectiveUserId == null && userKeyword != null && !userKeyword.isBlank()) {
             List<Long> ids = userServiceClient.searchUserIdsByKeyword(userKeyword.trim());
-            // 단순화를 위해 "1명만 정확히 매칭되면 그 userId로 검색"하는 전략 예시
             if (ids.size() == 1) {
                 effectiveUserId = ids.get(0);
             }
         }
 
-        // 3) orderNumber 공백 처리
         String normalizedOrderNumber = (orderNumber != null && !orderNumber.isBlank())
                 ? orderNumber.trim()
                 : null;
 
-        // 4) Repository 호출
         Page<Refund> refundPage = refundRepository.searchRefunds(
                 refundStatus,
                 from,
                 to,
-                userId,
+                effectiveUserId,
                 normalizedOrderNumber,
                 includeGuest,
                 pageable
         );
 
-        // 5) Refund -> RefundResponseDto 변환
         return refundPage.map(this::toRefundResponseDto);
     }
 
-    // 2) 관리자 반품 상세 조회
     @Override
     @Transactional(readOnly = true)
     public RefundResponseDto getRefundDetailsForAdmin(Long refundId) {
@@ -288,77 +310,97 @@ public class RefundServiceImpl implements RefundService {
         return toRefundResponseDto(refund);
     }
 
-    // 3) 관리자 반품 상태 변경
+    private static final Map<RefundStatus, List<RefundStatus>> ALLOWED_TRANSITIONS = Map.of(
+            RefundStatus.REQUESTED, List.of(RefundStatus.COLLECTION_PENDING, RefundStatus.REJECTED),
+            RefundStatus.COLLECTION_PENDING, List.of(RefundStatus.IN_TRANSIT, RefundStatus.REJECTED),
+            RefundStatus.IN_TRANSIT, List.of(RefundStatus.IN_INSPECTION, RefundStatus.REJECTED),
+            RefundStatus.IN_INSPECTION, List.of(RefundStatus.INSPECTION_COMPLETED, RefundStatus.REJECTED),
+            RefundStatus.INSPECTION_COMPLETED, List.of(RefundStatus.REFUND_COMPLETED, RefundStatus.REJECTED),
+            RefundStatus.REFUND_COMPLETED, List.of(),
+            RefundStatus.REJECTED, List.of()
+    );
+
     @Override
     public RefundResponseDto updateRefundStatus(Long refundId, RefundStatusUpdateDto request) {
+        // 동시성 방어(있다면): PESSIMISTIC_WRITE
+        Refund refund = refundRepository.findByIdForUpdate(refundId);
+        if (refund == null) {
+            throw new RefundNotFoundException("반품 내역을 찾을 수 없습니다. id=" + refundId);
+        }
 
-        Refund refund = loadRefund(refundId);
-        RefundStatus newStatus = RefundStatus.fromCode(request.getStatusCode());
+        RefundStatus current = RefundStatus.fromCode(refund.getRefundStatus());
+        RefundStatus next = RefundStatus.fromCode(request.getStatusCode());
 
-        // 상태 변경
-        /**
-         * - REFUND_COMPLETED 시:
-         *   1) 재고 복구
-         *   2) 주문/주문항목 상태 변경 (전체/부분 반품 반영)
-         *   3) 포인트 환불 금액 계산 후 user-service에 포인트 적립 요청
-         */
-        refund.setRefundStatus(newStatus.getCode());
+        if (current == RefundStatus.REFUND_COMPLETED || current == RefundStatus.REJECTED) {
+            throw new IllegalStateException("이미 종결된 반품 건은 상태 변경이 불가합니다. current=" + current);
+        }
 
-        // 환불(포인트) 완료 시 처리
-        if (newStatus == RefundStatus.REFUND_COMPLETED) {
-            // 재고 복구 및 주문/주문항복 상태 변경
+        List<RefundStatus> allowed = ALLOWED_TRANSITIONS.getOrDefault(current, List.of());
+        if (!allowed.contains(next)) {
+            throw new IllegalStateException("허용되지 않은 상태 전이입니다. " + current + " -> " + next);
+        }
+
+        refund.setRefundStatus(next.getCode());
+
+        if (next == RefundStatus.REFUND_COMPLETED) {
             handleRefundCompleted(refund);
-            // 포인트 환불 요청
             refundAsPoint(refund);
+        } else if (next == RefundStatus.REJECTED) {
+            if (refund.getOrder() != null) {
+                refund.getOrder().updateStatus(OrderStatus.DELIVERED);
+            }
         }
-        // 반품 거부 시 주문 상태 복원
-        else if (newStatus == RefundStatus.REJECTED) {
-            refund.getOrder().updateStatus(OrderStatus.DELIVERED);
-        }
+
         return toRefundResponseDto(refund);
     }
 
     private void refundAsPoint(Refund refund) {
         Order order = refund.getOrder();
+        if (order == null) return;
 
-        // 비회원 주문은 포인트 환불 대상이 아님
-        if (order.getUserId() == null) {
-            return;
+        if (order.getUserId() == null) return; // 비회원 포인트 환불 없음
+
+        RefundAmountResult amount = calculateRefundAmount(refund);
+
+        boolean allReturned = order.getOrderItems().stream()
+                .allMatch(oi -> oi.getOrderItemStatus() == OrderItemStatus.RETURN_COMPLETED);
+
+        int usedPoint = extractUsedPoint(order);
+
+        int pointToCredit;
+        int pointToRestore;
+
+        if (allReturned) {
+            pointToCredit = amount.getFinalPointAmount();
+            pointToRestore = usedPoint;
+        } else {
+            pointToCredit = amount.getFinalPointAmount();
+            pointToRestore = 0;
         }
 
-        RefundAmountResult amountResult = calculateRefundAmount(refund);
-
-        // 전체/부분 반품 구분은 필요하다면 여기서 로직 추가
-        boolean allReturned = order.getOrderItems().stream()
-                .allMatch(orderItem -> orderItem.getOrderItemStatus() == OrderItemStatus.RETURN_COMPLETED);
-
-        RefundPointRequestDto dto = new RefundPointRequestDto();
-        dto.setUserId(order.getUserId());
-        dto.setOrderId(order.getOrderId());
-        dto.setRefundAmount(amountResult.finalPointAmount); // 주의: 부분 반품이거나 쿠폰/포인트 사용이 있는 경우 이 값은 틀린 값이 됩니다.
-//        dto.setRefundId(refund.getRefundId());
-//        dto.setUsedPoint(0); // 지금은 "반품 시 사용 포인트는 복구하지 않는다" 전략(옵션3) 가정
-//        dto.setReturnAmount(amountResult.getFinalPointAmount());
+        RefundPointRequestDto dto = new RefundPointRequestDto(
+                order.getUserId(), order.getOrderId(), pointToCredit + pointToRestore);
 
         pointServiceClient.refundPoint(dto);
     }
 
+    private int extractUsedPoint(Order order) {
+        return order.getPointDiscount();
+    }
+
     // ======================================================
-    // 내부 헬퍼 메서드들
+    // 내부 헬퍼
     // ======================================================
-    // 1) Order 로딩
     private Order loadOrder(Long orderId) {
         return orderRepository.findById(orderId)
                 .orElseThrow(() -> new OrderNotFoundException(orderId));
     }
 
-    // 2) Refund 로딩
     private Refund loadRefund(Long refundId) {
         return refundRepository.findById(refundId)
                 .orElseThrow(() -> new RefundNotFoundException("반품 내역을 찾을 수 없습니다. id=" + refundId));
     }
 
-    // 3) 출고일 기준 경과일 계산
     private long getDaysAfterShipment(Order order) {
         Delivery delivery = deliveryRepository.findByOrder_OrderId(order.getOrderId())
                 .orElseThrow(() -> new IllegalStateException("배송 정보가 존재하지 않습니다."));
@@ -370,17 +412,7 @@ public class RefundServiceImpl implements RefundService {
         return ChronoUnit.DAYS.between(baseDate, LocalDate.now());
     }
 
-    // 4) 반품 가능 여부 검증
-    /**
-     * - 주문 상태: DELIVERED / COMPLETED 에서만 가능
-     * - 날짜/사유 정책:
-     *   * 10일 이내: 사유 상관없이 가능
-     *   * 10~30일: 파손/오배송(PRODUCT_DEFECT, WRONG_DELIVERY)만 가능
-     *   * 30일 초과: 어떤 사유도 불가
-     */
     private void validateRefundEligibility(Order order, RefundReason reason) {
-
-        // 주문 상태 검증
         if (order.getOrderStatus() != OrderStatus.DELIVERED &&
                 order.getOrderStatus() != OrderStatus.COMPLETED) {
             throw new IllegalStateException("배송 완료 또는 주문 완료 상태에서만 반품이 가능합니다. (현재 상태: " + order.getOrderStatus() + ")");
@@ -388,11 +420,10 @@ public class RefundServiceImpl implements RefundService {
 
         long days = getDaysAfterShipment(order);
 
-        // 30일 초과: 어떤 사유도 불가
         if (days > 30) {
             throw new IllegalStateException("출고일 기준 30일이 경과하여 반품이 불가합니다.");
         }
-        // 10일 초과 ~ 30일 이하: 파손/파본/오배송만 허용
+
         if (days > 10) {
             if (reason != RefundReason.PRODUCT_DEFECT && reason != RefundReason.WRONG_DELIVERY) {
                 throw new IllegalStateException("단순 변심/기타 사유는 출고일 기준 10일 이내에만 반품 가능합니다.");
@@ -400,7 +431,6 @@ public class RefundServiceImpl implements RefundService {
         }
     }
 
-    // 5) 반품 가능 수량 검증
     private void validateRefundQuantity(OrderItem orderItem, int requestQuantity) {
         int alreadyReturned = refundItemRepository.sumReturnedQuantityByOrderItemId(orderItem.getOrderItemId());
         int remainReturnable = orderItem.getOrderItemQuantity() - alreadyReturned;
@@ -412,9 +442,7 @@ public class RefundServiceImpl implements RefundService {
         }
     }
 
-    // 6) 진행 중인 반품이 있는지 검증
     private void validateNoActiveRefund(OrderItem orderItem) {
-
         Collection<Integer> activeStatuses = List.of(
                 RefundStatus.REQUESTED.getCode(),
                 RefundStatus.COLLECTION_PENDING.getCode(),
@@ -433,20 +461,14 @@ public class RefundServiceImpl implements RefundService {
         }
     }
 
-    // 7) 환불 완료 시 처리
-    /**
-     * - 재고 복구
-     * - 주문항목 상태 RETURN_COMPLETED
-     * - 주문 상태: 전체/부분 반품에 따라 RETURN_COMPLETED / PARTIAL_REFUND
-     */
     private void handleRefundCompleted(Refund refund) {
         Order order = refund.getOrder();
+        if (order == null) return;
 
-        // 1) 재고 복구
         List<StockDecreaseRequest> restoreRequests = refund.getRefundItem().stream()
-                .map(refundItem -> new StockDecreaseRequest(
-                        refundItem.getOrderItem().getBookId(),
-                        refundItem.getRefundQuantity()
+                .map(ri -> new StockDecreaseRequest(
+                        ri.getOrderItem().getBookId(),
+                        ri.getRefundQuantity()
                 ))
                 .collect(Collectors.toList());
 
@@ -454,17 +476,14 @@ public class RefundServiceImpl implements RefundService {
             bookServiceClient.increaseStock(restoreRequests);
         } catch (FeignException e) {
             log.warn("재고 복구 호출 실패 refundId={} : {}", refund.getRefundId(), e.getMessage());
-            // TODO 상황에 따라 롤백할지, 보류 상태로 둘지 정책 필요
-            throw e;
+            throw e; // 오늘 목표가 “에러 안나게”라도, 실패를 숨기면 더 큰 데이터 불일치가 남음
         }
 
-        // 2) 주문 항목 상태 업데이트
-        for (RefundItem refundItem : refund.getRefundItem()) {
-            OrderItem orderItem = refundItem.getOrderItem();
-            orderItem.setOrderItemStatus(OrderItemStatus.RETURN_COMPLETED);
+        for (RefundItem ri : refund.getRefundItem()) {
+            OrderItem oi = ri.getOrderItem();
+            oi.setOrderItemStatus(OrderItemStatus.RETURN_COMPLETED);
         }
 
-        // 3) 전체 / 부분 반품에 따른 주문 상태 결정
         boolean allReturned = order.getOrderItems().stream()
                 .allMatch(oi -> oi.getOrderItemStatus() == OrderItemStatus.RETURN_COMPLETED);
 
@@ -476,87 +495,66 @@ public class RefundServiceImpl implements RefundService {
         } else if (anyReturned) {
             order.updateStatus(OrderStatus.PARTIAL_REFUND);
         }
-
-        // 4) 포인트 적립/복구 로직 (user-service 연동)
-        // TODO 전체 반품 vs 부분 반품에 따라 금액 계산 후 포인트 서비스 호출
-        //  -> 별도 private RefundAmountResult calculateRefundAmount(...) + pointClient.refundPoint(...)
     }
 
-    // 8) 반품된 항목들을 기준으로 "포인트로 지급할 환불 금액" 계산
-    /**
-     * - itemsAmount: 반품 상품 금액 합계 (unitPrice * refundQuantity)
-     * - shippingFeeDeduction: 반품 택배비 (단순 예시: 5,000원)
-     * - finalPointAmount: 실제로 포인트로 적립할 금액
-     */
     private RefundAmountResult calculateRefundAmount(Refund refund) {
-
         Order order = refund.getOrder();
 
         int itemsAmount = refund.getRefundItem().stream()
-                .mapToInt(refundItem -> refundItem.getOrderItem().getUnitPrice() * refundItem.getRefundQuantity())
+                .mapToInt(ri -> ri.getOrderItem().getUnitPrice() * ri.getRefundQuantity())
                 .sum();
 
         int shippingFeeDeduction = 0;
 
-        RefundReason reason = RefundReason.valueOf(refund.getRefundReason());
-//        RefundReason reason = parseRefundReason(refund.getRefundReason());
-        long days = getDaysAfterShipment(order);
+        RefundReason reason = parseRefundReason(refund.getRefundReason());
+        long days = (order != null) ? getDaysAfterShipment(order) : 0;
 
         if (days <= 10) {
             if (reason == RefundReason.CHANGE_OF_MIND || reason == RefundReason.OTHER) {
-                shippingFeeDeduction = 5000; // 예시
+                shippingFeeDeduction = 5000;
             }
         } else {
-            // 10~30일 구간: validateRefundEligibility 에서 이미 reason 검증을 했다고 가정 (파손/오배송만)
             shippingFeeDeduction = 0;
         }
 
         int finalPointAmount = Math.max(itemsAmount - shippingFeeDeduction, 0);
-
         return new RefundAmountResult(itemsAmount, shippingFeeDeduction, finalPointAmount);
     }
 
-    // 9) Refund 엔티티를 화면 응답 DTO로 변환
     private RefundResponseDto toRefundResponseDto(Refund refund) {
-
-        // 1) bookIds 수집
         List<Long> bookIds = refund.getRefundItem().stream()
-                .map(refundItem -> refundItem.getOrderItem().getBookId())
-                .collect(Collectors.toList());
+                .map(ri -> ri.getOrderItem().getBookId())
+                .distinct()
+                .toList();
 
-        // 2) 도서 정보 조회
-        Map<Long, BookOrderResponse> tempBookMap;
-        try {
-            List<BookOrderResponse> bookInfos = bookServiceClient.getBooksForOrder(bookIds);
-            tempBookMap = bookInfos.stream()
-                    .collect(Collectors.toMap(BookOrderResponse::getBookId, Function.identity()));
-        } catch (FeignException e) {
-            log.warn("도서 정보 조회 실패 (refundId={}): {}", refund.getRefundId(), e.getMessage());
-            tempBookMap = Collections.emptyMap();
+        Map<Long, BookOrderResponse> bookMap = Collections.emptyMap();
+        if (!bookIds.isEmpty()) {
+            try {
+                bookMap = bookServiceClient.getBooksForOrder(bookIds).stream()
+                        .collect(Collectors.toMap(BookOrderResponse::getBookId, Function.identity()));
+            } catch (FeignException e) {
+                log.warn("도서 정보 조회 실패 (refundId={}): {}", refund.getRefundId(), e.getMessage());
+            }
         }
 
-        // 3) 람다에서 사용할 final map
-        final Map<Long, BookOrderResponse> bookMap = tempBookMap;
-
-        // 4) RefundItemDetailDto 리스트 구성
+        Map<Long, BookOrderResponse> finalBookMap = bookMap;
         List<RefundItemDetailDto> itemDetails = refund.getRefundItem().stream()
-                .map(refundItem -> {
-                    Long bookId = refundItem.getOrderItem().getBookId();
-                    BookOrderResponse bookInfo = bookMap.get(bookId);
-                    String title = (bookInfo != null) ? bookInfo.getTitle() : "";
+                .map(ri -> {
+                    Long bookId = ri.getOrderItem().getBookId();
+                    BookOrderResponse info = finalBookMap.get(bookId);
+                    String title = (info != null) ? info.getTitle() : "";
                     return new RefundItemDetailDto(
-                            refundItem.getRefundItemId(),
-                            refundItem.getOrderItem().getOrderItemId(),
+                            ri.getRefundItemId(),
+                            ri.getOrderItem().getOrderItemId(),
                             title,
-                            refundItem.getRefundQuantity()
+                            ri.getRefundQuantity()
                     );
                 })
                 .collect(Collectors.toList());
 
-        // 5) RefundResponseDto 생성
         return new RefundResponseDto(
                 refund.getRefundId(),
-                refund.getOrder().getOrderId(),
+                refund.getOrder() != null ? refund.getOrder().getOrderId() : null,
                 refund.getRefundReason(),
                 refund.getRefundReasonDetail(),
                 RefundStatus.fromCode(refund.getRefundStatus()).getDescription(),
@@ -565,11 +563,10 @@ public class RefundServiceImpl implements RefundService {
         );
     }
 
-    // 10) 반품 금액 계산 결과를 담는 내부 DTO
     private static class RefundAmountResult {
-        private final int itemsAmount;          // 반품 상품 금액 합계 (unitPrice * qty)
-        private final int shippingFeeDeduction; // 고객이 부담하는 반품 배송비 (차감액)
-        private final int finalPointAmount;     // 실제로 포인트로 적립할 금액
+        private final int itemsAmount;
+        private final int shippingFeeDeduction;
+        private final int finalPointAmount;
 
         public RefundAmountResult(int itemsAmount, int shippingFeeDeduction, int finalPointAmount) {
             this.itemsAmount = itemsAmount;
@@ -589,5 +586,4 @@ public class RefundServiceImpl implements RefundService {
             return finalPointAmount;
         }
     }
-
 }
